--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "name": "browserstack-cli",
   "description": "A command line interface for the BrowserStack API.",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "homepage": "https://github.com/dbrans/browserstack-cli",
   "repository": {
     "type": "git",
@@ -18,7 +18,8 @@
   "dependencies": {
     "commander": "1.x",
     "async": "0.x.x",
-    "browserstack": "0.x.x"
+    "browserstack": "0.x.x",
+    "winston": "0.3.x"
   },
   "devDependencies": {
     "grunt": "0.x.x"
