Fixed grunt version. Grunt was breaking with newest version of grunt. Added a gitignore to ignore node modules. Needed for contributors who npm install.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "winston": "0.3.x"
   },
   "devDependencies": {
-    "grunt": "0.x.x"
+    "grunt": "0.3.0"
   },
   "bin": {
     "browserstack": "bin/cli.js"
