--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
-  "author": {
-    "name": "Derek Brans",
-    "email": "dbrans@gmail.com",
-    "website": "http://github.com/dbrans"
-  },
+  "contributors": [
+    {
+      "name": "Derek Brans",
+      "email": "dbrans@gmail.com",
+      "website": "http://github.com/dbrans"
+    },
+    {
+      "name": "Toby Ho",
+      "email": "airportyh@gmail.com",
+      "website": "http://github.com/airportyh"
+    }
+  ],
   "name": "browserstack-cli",
   "description": "A command line interface for the BrowserStack API.",
   "version": "0.2.7",
-  "homepage": "https://github.com/dbrans/browserstack-cli",
+  "homepage": "https://github.com/airportyh/browserstack-cli",
   "repository": {
     "type": "git",
-    "url": "git://github.com/dbrans/browserstack-cli.git"
+    "url": "git://github.com/airportyh/browserstack-cli.git"
   },
   "engines": {
     "node": ">=0.6.0"
